--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #gif {
-  height: 50%;
+  width: 50%;
 }
 
 #gif:active {
@@ -25,7 +25,6 @@ h2 {
   font-size: 3em;
   color: #e94d58;
   margin-bottom: 100px;
-  margin-left: 150px;
   font-size: 45px;
 }
 
